transparent background and removed titles

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,6 +4,7 @@ body {
   background-image: url("../images/bao-groceries.png");
   background-repeat: no-repeat;
   background-color: aliceblue;
+  opacity: 0.9;
 
 }
 
