--- a/views/shopping-list-details.ejs
+++ b/views/shopping-list-details.ejs
@@ -5,10 +5,10 @@
   <% include head %>
 </head>
 <% include navbar %>
-  <h1>
+  <h2>
     <%= shopping_list_overview[0].shopping_list_name %>
-  </h1>
-  <p>Welcome to <%= shopping_list_overview[0].shopping_list_overview %>
+  </h2>
+  <p><%= shopping_list_overview[0].shopping_list_overview %>
   </p>
   <div class="list-group" id="all-list-items-wrapper">
 
