--- a/views/add-new-list.ejs
+++ b/views/add-new-list.ejs
@@ -26,8 +26,10 @@
 </div>
 </span>
 <div>
-<button type="button" class="btn btn-light" id="add-item"><i class="bi bi-plus-circle"></i>Add item</button>
+<button type="button" class="btn btn-outline-info float-end" id="add-item"><i class="bi bi-plus-circle"></i>Add item</button>
 </div>
+<br>
+<br>
 <br>
 <button type="submit" class="btn btn-primary float-end">Save the shopping list</button>
 </form>
