--- a/views/shopping-list-details.ejs
+++ b/views/shopping-list-details.ejs
@@ -10,7 +10,7 @@
   </h2>
   <p><%= shopping_list_overview[0].shopping_list_overview %>
   </p>
-  <div class="list-group" id="all-list-items-wrapper">
+  <div class="list-group opacity-90" id="all-list-items-wrapper">
 
     <% shopping_list.forEach(function(item){ %>
       <div class="row" >
