--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand navbar-light bg-light ">
+<nav class="navbar navbar-expand navbar-light style="background-color: #e3f2fd;"">
   <div class="container-fluid">
     <!--
     <a class="navbar-brand" href="#">Shopping</a>
@@ -12,7 +12,7 @@
           <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/add-new" tabindex="-1" >Add new list</a>
+          <a class="nav-link " href="/add-new" tabindex="-1" >Add new list</a>
         </li>
       </ul>
       <form class="d-flex">
